[package]
name = "songmap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "songmap"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = true }
egui   = "0.29"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rfd        = "0.14"

[build-dependencies]
image = "0.25"

[profile.release]
opt-level = 2
